--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ isort = "^5.6.4"
 flake8 = "^3.8.4"
 autoflake = "^1.4"
 pytest = "^6.2.1"
+mypy = "^0.790"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
